parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> ProgPral
Rule 1     ProgPral -> PROGRAM id DosPuntos PrimerCuad Var Sub RellenaPrimerCuad B END
Rule 2     PrimerCuad -> Vacio
Rule 3     RellenaPrimerCuad -> Vacio
Rule 4     Vacio -> <empty>
Rule 5     Var -> V
Rule 6     Var -> Vacio
Rule 7     Sub -> Vacio
Rule 8     Sub -> P Sub
Rule 9     V -> DIM IDrepCrear of Type PuntoYComa
Rule 10    V -> DIM IDrepCrear of Type PuntoYComa V
Rule 11    IDrepCrear -> id
Rule 12    IDrepCrear -> id Coma IDrepCrear
Rule 13    IDrepOUT -> idOUT
Rule 14    IDrepOUT -> idOUT Coma IDrepOUT
Rule 15    idOUT -> id
Rule 16    IDrepInput -> idInput
Rule 17    IDrepInput -> idInput Coma IDrepInput
Rule 18    idInput -> id
Rule 19    Type -> double
Rule 20    Type -> word
Rule 21    Type -> matrixDeclaration sacaMatrices
Rule 22    matrixDeclaration -> matrix size CorcheteA Decnumsize CorcheteC
Rule 23    sacaMatrices -> Vacio
Rule 24    Decnumsize -> numero Vacio
Rule 25    Decnumsize -> numero Coma numero
Rule 26    P -> SUB PROCEDURE nombreRutina DosPuntos B CuadruploReturn PuntoYComa
Rule 27    nombreRutina -> id
Rule 28    CuadruploReturn -> RETURN
Rule 29    B -> BEGIN Srep
Rule 30    Srep -> S
Rule 31    Srep -> S Srep
Rule 32    S -> letSintaxis PuntoYComa
Rule 33    S -> IF ParentesisA E ParentesisC paso1IF THEN Srep Elsop ENDIF paso3IF PuntoYComa
Rule 34    S -> INPUT IDrepInput PuntoYComa
Rule 35    S -> WHILE paso1WHILE ParentesisA E ParentesisC paso2WHILE Srep WEND paso3WHILE PuntoYComa
Rule 36    S -> DO paso1DO Srep LOOP ParentesisA E ParentesisC paso2DO PuntoYComa
Rule 37    S -> FOR ParentesisA letSintaxis paso1FOR PuntoYComa E paso2FOR PuntoYComa letSintaxis ParentesisC paso3FOR Srep NEXT paso4FOR PuntoYComa
Rule 38    S -> GOSUB gosubCuad PuntoYComa
Rule 39    S -> Gato miString Gato
Rule 40    S -> OUTPUT Outopt PuntoYComa
Rule 41    gosubCuad -> id
Rule 42    paso1FOR -> Vacio
Rule 43    paso2FOR -> Vacio
Rule 44    paso3FOR -> Vacio
Rule 45    paso4FOR -> Vacio
Rule 46    letSintaxis -> LET letid matriz DosPuntosIgual E Cuadruploigualacion
Rule 47    paso1WHILE -> Vacio
Rule 48    paso2WHILE -> Vacio
Rule 49    paso3WHILE -> Vacio
Rule 50    paso1DO -> Vacio
Rule 51    paso2DO -> Vacio
Rule 52    paso3IF -> Vacio
Rule 53    paso1IF -> Vacio
Rule 54    Cuadruploigualacion -> Vacio
Rule 55    letid -> id
Rule 56    E -> ES Mayor ES
Rule 57    E -> ES Menor ES
Rule 58    E -> ES MayorIgual ES
Rule 59    E -> ES MenorIgual ES
Rule 60    E -> ES Igual ES
Rule 61    E -> ES Diferente ES
Rule 62    E -> ES
Rule 63    ES -> T
Rule 64    ES -> ES Mas T
Rule 65    ES -> ES Menos T
Rule 66    ES -> ES OR T
Rule 67    T -> F
Rule 68    T -> T Por F
Rule 69    T -> T AND F
Rule 70    T -> T Entre F
Rule 71    T -> T Potencia F
Rule 72    T -> T NOT F
Rule 73    F -> id
Rule 74    F -> id CorcheteA Erep CorcheteC
Rule 75    F -> numero
Rule 76    F -> ParentesisA E ParentesisC
Rule 77    Erep -> E Vacio
Rule 78    Erep -> E Coma E
Rule 79    matriz -> Vacio
Rule 80    matriz -> CorcheteA Erep CorcheteC
Rule 81    numsize -> numero Vacio
Rule 82    numsize -> numero Coma numero
Rule 83    Elsop -> Vacio
Rule 84    Elsop -> ELSE paso2IF Srep
Rule 85    paso2IF -> Vacio
Rule 86    Outopt -> IDrepOUT
Rule 87    Outopt -> Comillas miStringOut Comillas
Rule 88    miString -> Vacio
Rule 89    miString -> id miString
Rule 90    miString -> DosPuntos miString
Rule 91    miString -> PuntoYComa miString
Rule 92    miString -> Coma miString
Rule 93    miString -> CorcheteA miString
Rule 94    miString -> CorcheteC miString
Rule 95    miString -> numero miString
Rule 96    miString -> DosPuntosIgual miString
Rule 97    miString -> ParentesisA miString
Rule 98    miString -> ParentesisC miString
Rule 99    miString -> Comillas miString
Rule 100   miString -> Mayor miString
Rule 101   miString -> Menor miString
Rule 102   miString -> MayorIgual miString
Rule 103   miString -> MenorIgual miString
Rule 104   miString -> Igual miString
Rule 105   miString -> Diferente miString
Rule 106   miString -> Mas miString
Rule 107   miString -> Menos miString
Rule 108   miString -> Por miString
Rule 109   miString -> Entre miString
Rule 110   miString -> Potencia miString
Rule 111   miString -> GuionBajo miString
Rule 112   miString -> SignoInterr miString
Rule 113   miStringOut -> Vacio
Rule 114   miStringOut -> id miStringOut
Rule 115   miStringOut -> DosPuntos miStringOut
Rule 116   miStringOut -> PuntoYComa miStringOut
Rule 117   miStringOut -> Coma miStringOut
Rule 118   miStringOut -> CorcheteA miStringOut
Rule 119   miStringOut -> CorcheteC miStringOut
Rule 120   miStringOut -> numero miStringOut
Rule 121   miStringOut -> DosPuntosIgual miStringOut
Rule 122   miStringOut -> ParentesisA miStringOut
Rule 123   miStringOut -> ParentesisC miStringOut
Rule 124   miStringOut -> Mayor miStringOut
Rule 125   miStringOut -> Menor miStringOut
Rule 126   miStringOut -> MayorIgual miStringOut
Rule 127   miStringOut -> MenorIgual miStringOut
Rule 128   miStringOut -> Igual miStringOut
Rule 129   miStringOut -> Diferente miStringOut
Rule 130   miStringOut -> Mas miStringOut
Rule 131   miStringOut -> Menos miStringOut
Rule 132   miStringOut -> Por miStringOut
Rule 133   miStringOut -> Entre miStringOut
Rule 134   miStringOut -> Potencia miStringOut
Rule 135   miStringOut -> GuionBajo miStringOut
Rule 136   miStringOut -> Gato miStringOut
Rule 137   miStringOut -> SignoInterr miStringOut

Terminals, with rules where they appear

AND                  : 69
BEGIN                : 29
Coma                 : 12 14 17 25 78 82 92 117
Comillas             : 87 87 99
CorcheteA            : 22 74 80 93 118
CorcheteC            : 22 74 80 94 119
DIM                  : 9 10
DO                   : 36
Diferente            : 61 105 129
DosPuntos            : 1 26 90 115
DosPuntosIgual       : 46 96 121
ELSE                 : 84
END                  : 1
ENDIF                : 33
Entre                : 70 109 133
FOR                  : 37
GOSUB                : 38
Gato                 : 39 39 136
GuionBajo            : 111 135
IF                   : 33
INPUT                : 34
Igual                : 60 104 128
LET                  : 46
LOOP                 : 36
Mas                  : 64 106 130
Mayor                : 56 100 124
MayorIgual           : 58 102 126
Menor                : 57 101 125
MenorIgual           : 59 103 127
Menos                : 65 107 131
NEXT                 : 37
NOT                  : 72
OR                   : 66
OUTPUT               : 40
PROCEDURE            : 26
PROGRAM              : 1
ParentesisA          : 33 35 36 37 76 97 122
ParentesisC          : 33 35 36 37 76 98 123
Por                  : 68 108 132
Potencia             : 71 110 134
PuntoYComa           : 9 10 26 32 33 34 35 36 37 37 37 38 40 91 116
RETURN               : 28
SUB                  : 26
SignoInterr          : 112 137
THEN                 : 33
WEND                 : 35
WHILE                : 35
double               : 19
error                : 
id                   : 1 11 12 15 18 27 41 55 73 74 89 114
matrix               : 22
numero               : 24 25 25 75 81 82 82 95 120
of                   : 9 10
size                 : 22
word                 : 20

Nonterminals, with rules where they appear

B                    : 1 26
CuadruploReturn      : 26
Cuadruploigualacion  : 46
Decnumsize           : 22
E                    : 33 35 36 37 46 76 77 78 78
ES                   : 56 56 57 57 58 58 59 59 60 60 61 61 62 64 65 66
Elsop                : 33
Erep                 : 74 80
F                    : 67 68 69 70 71 72
IDrepCrear           : 9 10 12
IDrepInput           : 17 34
IDrepOUT             : 14 86
Outopt               : 40
P                    : 8
PrimerCuad           : 1
ProgPral             : 0
RellenaPrimerCuad    : 1
S                    : 30 31
Srep                 : 29 31 33 35 36 37 84
Sub                  : 1 8
T                    : 63 64 65 66 68 69 70 71 72
Type                 : 9 10
V                    : 5 10
Vacio                : 2 3 6 7 23 24 42 43 44 45 47 48 49 50 51 52 53 54 77 79 81 83 85 88 113
Var                  : 1
gosubCuad            : 38
idInput              : 16 17
idOUT                : 13 14
letSintaxis          : 32 37 37
letid                : 46
matrixDeclaration    : 21
matriz               : 46
miString             : 39 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112
miStringOut          : 87 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137
nombreRutina         : 26
numsize              : 
paso1DO              : 36
paso1FOR             : 37
paso1IF              : 33
paso1WHILE           : 35
paso2DO              : 36
paso2FOR             : 37
paso2IF              : 84
paso2WHILE           : 35
paso3FOR             : 37
paso3IF              : 33
paso3WHILE           : 35
paso4FOR             : 37
sacaMatrices         : 21

Parsing method: LALR

state 0

    (0) S' -> . ProgPral
    (1) ProgPral -> . PROGRAM id DosPuntos PrimerCuad Var Sub RellenaPrimerCuad B END

    PROGRAM         shift and go to state 2

    ProgPral                       shift and go to state 1

state 1

    (0) S' -> ProgPral .



state 2

    (1) ProgPral -> PROGRAM . id DosPuntos PrimerCuad Var Sub RellenaPrimerCuad B END

    id              shift and go to state 3


state 3

    (1) ProgPral -> PROGRAM id . DosPuntos PrimerCuad Var Sub RellenaPrimerCuad B END

    DosPuntos       shift and go to state 4


state 4

    (1) ProgPral -> PROGRAM id DosPuntos . PrimerCuad Var Sub RellenaPrimerCuad B END
    (2) PrimerCuad -> . Vacio
    (4) Vacio -> .

    DIM             reduce using rule 4 (Vacio -> .)
    SUB             reduce using rule 4 (Vacio -> .)
    BEGIN           reduce using rule 4 (Vacio -> .)

    PrimerCuad                     shift and go to state 5
    Vacio                          shift and go to state 6

state 5

    (1) ProgPral -> PROGRAM id DosPuntos PrimerCuad . Var Sub RellenaPrimerCuad B END
    (5) Var -> . V
    (6) Var -> . Vacio
    (9) V -> . DIM IDrepCrear of Type PuntoYComa
    (10) V -> . DIM IDrepCrear of Type PuntoYComa V
    (4) Vacio -> .

    DIM             shift and go to state 10
    SUB             reduce using rule 4 (Vacio -> .)
    BEGIN           reduce using rule 4 (Vacio -> .)

    Var                            shift and go to state 7
    V                              shift and go to state 8
    Vacio                          shift and go to state 9

state 6

    (2) PrimerCuad -> Vacio .

    DIM             reduce using rule 2 (PrimerCuad -> Vacio .)
    SUB             reduce using rule 2 (PrimerCuad -> Vacio .)
    BEGIN           reduce using rule 2 (PrimerCuad -> Vacio .)


state 7

    (1) ProgPral -> PROGRAM id DosPuntos PrimerCuad Var . Sub RellenaPrimerCuad B END
    (7) Sub -> . Vacio
    (8) Sub -> . P Sub
    (4) Vacio -> .
    (26) P -> . SUB PROCEDURE nombreRutina DosPuntos B CuadruploReturn PuntoYComa

    BEGIN           reduce using rule 4 (Vacio -> .)
    SUB             shift and go to state 14

    Sub                            shift and go to state 11
    Vacio                          shift and go to state 12
    P                              shift and go to state 13

state 8

    (5) Var -> V .

    SUB             reduce using rule 5 (Var -> V .)
    BEGIN           reduce using rule 5 (Var -> V .)


state 9

    (6) Var -> Vacio .

    SUB             reduce using rule 6 (Var -> Vacio .)
    BEGIN           reduce using rule 6 (Var -> Vacio .)


state 10

    (9) V -> DIM . IDrepCrear of Type PuntoYComa
    (10) V -> DIM . IDrepCrear of Type PuntoYComa V
    (11) IDrepCrear -> . id
    (12) IDrepCrear -> . id Coma IDrepCrear

    id              shift and go to state 16

    IDrepCrear                     shift and go to state 15

state 11

    (1) ProgPral -> PROGRAM id DosPuntos PrimerCuad Var Sub . RellenaPrimerCuad B END
    (3) RellenaPrimerCuad -> . Vacio
    (4) Vacio -> .

    BEGIN           reduce using rule 4 (Vacio -> .)

    RellenaPrimerCuad              shift and go to state 17
    Vacio                          shift and go to state 18

state 12

    (7) Sub -> Vacio .

    BEGIN           reduce using rule 7 (Sub -> Vacio .)


state 13

    (8) Sub -> P . Sub
    (7) Sub -> . Vacio
    (8) Sub -> . P Sub
    (4) Vacio -> .
    (26) P -> . SUB PROCEDURE nombreRutina DosPuntos B CuadruploReturn PuntoYComa

    BEGIN           reduce using rule 4 (Vacio -> .)
    SUB             shift and go to state 14

    P                              shift and go to state 13
    Sub                            shift and go to state 19
    Vacio                          shift and go to state 12

state 14

    (26) P -> SUB . PROCEDURE nombreRutina DosPuntos B CuadruploReturn PuntoYComa

    PROCEDURE       shift and go to state 20


state 15

    (9) V -> DIM IDrepCrear . of Type PuntoYComa
    (10) V -> DIM IDrepCrear . of Type PuntoYComa V

    of              shift and go to state 21


state 16

    (11) IDrepCrear -> id .
    (12) IDrepCrear -> id . Coma IDrepCrear

    of              reduce using rule 11 (IDrepCrear -> id .)
    Coma            shift and go to state 22


state 17

    (1) ProgPral -> PROGRAM id DosPuntos PrimerCuad Var Sub RellenaPrimerCuad . B END
    (29) B -> . BEGIN Srep

    BEGIN           shift and go to state 24

    B                              shift and go to state 23

state 18

    (3) RellenaPrimerCuad -> Vacio .

    BEGIN           reduce using rule 3 (RellenaPrimerCuad -> Vacio .)


state 19

    (8) Sub -> P Sub .

    BEGIN           reduce using rule 8 (Sub -> P Sub .)


state 20

    (26) P -> SUB PROCEDURE . nombreRutina DosPuntos B CuadruploReturn PuntoYComa
    (27) nombreRutina -> . id

    id              shift and go to state 26

    nombreRutina                   shift and go to state 25

state 21

    (9) V -> DIM IDrepCrear of . Type PuntoYComa
    (10) V -> DIM IDrepCrear of . Type PuntoYComa V
    (19) Type -> . double
    (20) Type -> . word
    (21) Type -> . matrixDeclaration sacaMatrices
    (22) matrixDeclaration -> . matrix size CorcheteA Decnumsize CorcheteC

    double          shift and go to state 28
    word            shift and go to state 29
    matrix          shift and go to state 31

    Type                           shift and go to state 27
    matrixDeclaration              shift and go to state 30

state 22

    (12) IDrepCrear -> id Coma . IDrepCrear
    (11) IDrepCrear -> . id
    (12) IDrepCrear -> . id Coma IDrepCrear

    id              shift and go to state 16

    IDrepCrear                     shift and go to state 32

state 23

    (1) ProgPral -> PROGRAM id DosPuntos PrimerCuad Var Sub RellenaPrimerCuad B . END

    END             shift and go to state 33


state 24

    (29) B -> BEGIN . Srep
    (30) Srep -> . S
    (31) Srep -> . S Srep
    (32) S -> . letSintaxis PuntoYComa
    (33) S -> . IF ParentesisA E ParentesisC paso1IF THEN Srep Elsop ENDIF paso3IF PuntoYComa
    (34) S -> . INPUT IDrepInput PuntoYComa
    (35) S -> . WHILE paso1WHILE ParentesisA E ParentesisC paso2WHILE Srep WEND paso3WHILE PuntoYComa
    (36) S -> . DO paso1DO Srep LOOP ParentesisA E ParentesisC paso2DO PuntoYComa
    (37) S -> . FOR ParentesisA letSintaxis paso1FOR PuntoYComa E paso2FOR PuntoYComa letSintaxis ParentesisC paso3FOR Srep NEXT paso4FOR PuntoYComa
    (38) S -> . GOSUB gosubCuad PuntoYComa
    (39) S -> . Gato miString Gato
    (40) S -> . OUTPUT Outopt PuntoYComa
    (46) letSintaxis -> . LET letid matriz DosPuntosIgual E Cuadruploigualacion

    IF              shift and go to state 37
    INPUT           shift and go to state 38
    WHILE           shift and go to state 39
    DO              shift and go to state 40
    FOR             shift and go to state 41
    GOSUB           shift and go to state 42
    Gato            shift and go to state 43
    OUTPUT          shift and go to state 44
    LET             shift and go to state 45

    Srep                           shift and go to state 34
    S                              shift and go to state 35
    letSintaxis                    shift and go to state 36

state 25

    (26) P -> SUB PROCEDURE nombreRutina . DosPuntos B CuadruploReturn PuntoYComa

    DosPuntos       shift and go to state 46


state 26

    (27) nombreRutina -> id .

    DosPuntos       reduce using rule 27 (nombreRutina -> id .)


state 27

    (9) V -> DIM IDrepCrear of Type . PuntoYComa
    (10) V -> DIM IDrepCrear of Type . PuntoYComa V

    PuntoYComa      shift and go to state 47


state 28

    (19) Type -> double .

    PuntoYComa      reduce using rule 19 (Type -> double .)


state 29

    (20) Type -> word .

    PuntoYComa      reduce using rule 20 (Type -> word .)


state 30

    (21) Type -> matrixDeclaration . sacaMatrices
    (23) sacaMatrices -> . Vacio
    (4) Vacio -> .

    PuntoYComa      reduce using rule 4 (Vacio -> .)

    sacaMatrices                   shift and go to state 48
    Vacio                          shift and go to state 49

state 31

    (22) matrixDeclaration -> matrix . size CorcheteA Decnumsize CorcheteC

    size            shift and go to state 50


state 32

    (12) IDrepCrear -> id Coma IDrepCrear .

    of              reduce using rule 12 (IDrepCrear -> id Coma IDrepCrear .)


state 33

    (1) ProgPral -> PROGRAM id DosPuntos PrimerCuad Var Sub RellenaPrimerCuad B END .

    $end            reduce using rule 1 (ProgPral -> PROGRAM id DosPuntos PrimerCuad Var Sub RellenaPrimerCuad B END .)


state 34

    (29) B -> BEGIN Srep .

    END             reduce using rule 29 (B -> BEGIN Srep .)
    RETURN          reduce using rule 29 (B -> BEGIN Srep .)


state 35

    (30) Srep -> S .
    (31) Srep -> S . Srep
    (30) Srep -> . S
    (31) Srep -> . S Srep
    (32) S -> . letSintaxis PuntoYComa
    (33) S -> . IF ParentesisA E ParentesisC paso1IF THEN Srep Elsop ENDIF paso3IF PuntoYComa
    (34) S -> . INPUT IDrepInput PuntoYComa
    (35) S -> . WHILE paso1WHILE ParentesisA E ParentesisC paso2WHILE Srep WEND paso3WHILE PuntoYComa
    (36) S -> . DO paso1DO Srep LOOP ParentesisA E ParentesisC paso2DO PuntoYComa
    (37) S -> . FOR ParentesisA letSintaxis paso1FOR PuntoYComa E paso2FOR PuntoYComa letSintaxis ParentesisC paso3FOR Srep NEXT paso4FOR PuntoYComa
    (38) S -> . GOSUB gosubCuad PuntoYComa
    (39) S -> . Gato miString Gato
    (40) S -> . OUTPUT Outopt PuntoYComa
    (46) letSintaxis -> . LET letid matriz DosPuntosIgual E Cuadruploigualacion

    END             reduce using rule 30 (Srep -> S .)
    RETURN          reduce using rule 30 (Srep -> S .)
    LOOP            reduce using rule 30 (Srep -> S .)
    ELSE            reduce using rule 30 (Srep -> S .)
    ENDIF           reduce using rule 30 (Srep -> S .)
    WEND            reduce using rule 30 (Srep -> S .)
    NEXT            reduce using rule 30 (Srep -> S .)
    IF              shift and go to state 37
    INPUT           shift and go to state 38
    WHILE           shift and go to state 39
    DO              shift and go to state 40
    FOR             shift and go to state 41
    GOSUB           shift and go to state 42
    Gato            shift and go to state 43
    OUTPUT          shift and go to state 44
    LET             shift and go to state 45

    S                              shift and go to state 35
    Srep                           shift and go to state 51
    letSintaxis                    shift and go to state 36

state 36

    (32) S -> letSintaxis . PuntoYComa

    PuntoYComa      shift and go to state 52


state 37

    (33) S -> IF . ParentesisA E ParentesisC paso1IF THEN Srep Elsop ENDIF paso3IF PuntoYComa

    ParentesisA     shift and go to state 53


state 38

    (34) S -> INPUT . IDrepInput PuntoYComa
    (16) IDrepInput -> . idInput
    (17) IDrepInput -> . idInput Coma IDrepInput
    (18) idInput -> . id

    id              shift and go to state 56

    IDrepInput                     shift and go to state 54
    idInput                        shift and go to state 55

state 39

    (35) S -> WHILE . paso1WHILE ParentesisA E ParentesisC paso2WHILE Srep WEND paso3WHILE PuntoYComa
    (47) paso1WHILE -> . Vacio
    (4) Vacio -> .

    ParentesisA     reduce using rule 4 (Vacio -> .)

    paso1WHILE                     shift and go to state 57
    Vacio                          shift and go to state 58

state 40

    (36) S -> DO . paso1DO Srep LOOP ParentesisA E ParentesisC paso2DO PuntoYComa
    (50) paso1DO -> . Vacio
    (4) Vacio -> .

    IF              reduce using rule 4 (Vacio -> .)
    INPUT           reduce using rule 4 (Vacio -> .)
    WHILE           reduce using rule 4 (Vacio -> .)
    DO              reduce using rule 4 (Vacio -> .)
    FOR             reduce using rule 4 (Vacio -> .)
    GOSUB           reduce using rule 4 (Vacio -> .)
    Gato            reduce using rule 4 (Vacio -> .)
    OUTPUT          reduce using rule 4 (Vacio -> .)
    LET             reduce using rule 4 (Vacio -> .)

    paso1DO                        shift and go to state 59
    Vacio                          shift and go to state 60

state 41

    (37) S -> FOR . ParentesisA letSintaxis paso1FOR PuntoYComa E paso2FOR PuntoYComa letSintaxis ParentesisC paso3FOR Srep NEXT paso4FOR PuntoYComa

    ParentesisA     shift and go to state 61


state 42

    (38) S -> GOSUB . gosubCuad PuntoYComa
    (41) gosubCuad -> . id

    id              shift and go to state 63

    gosubCuad                      shift and go to state 62

state 43

    (39) S -> Gato . miString Gato
    (88) miString -> . Vacio
    (89) miString -> . id miString
    (90) miString -> . DosPuntos miString
    (91) miString -> . PuntoYComa miString
    (92) miString -> . Coma miString
    (93) miString -> . CorcheteA miString
    (94) miString -> . CorcheteC miString
    (95) miString -> . numero miString
    (96) miString -> . DosPuntosIgual miString
    (97) miString -> . ParentesisA miString
    (98) miString -> . ParentesisC miString
    (99) miString -> . Comillas miString
    (100) miString -> . Mayor miString
    (101) miString -> . Menor miString
    (102) miString -> . MayorIgual miString
    (103) miString -> . MenorIgual miString
    (104) miString -> . Igual miString
    (105) miString -> . Diferente miString
    (106) miString -> . Mas miString
    (107) miString -> . Menos miString
    (108) miString -> . Por miString
    (109) miString -> . Entre miString
    (110) miString -> . Potencia miString
    (111) miString -> . GuionBajo miString
    (112) miString -> . SignoInterr miString
    (4) Vacio -> .

    id              shift and go to state 66
    DosPuntos       shift and go to state 67
    PuntoYComa      shift and go to state 68
    Coma            shift and go to state 69
    CorcheteA       shift and go to state 70
    CorcheteC       shift and go to state 71
    numero          shift and go to state 72
    DosPuntosIgual  shift and go to state 73
    ParentesisA     shift and go to state 74
    ParentesisC     shift and go to state 75
    Comillas        shift and go to state 76
    Mayor           shift and go to state 77
    Menor           shift and go to state 78
    MayorIgual      shift and go to state 79
    MenorIgual      shift and go to state 80
    Igual           shift and go to state 81
    Diferente       shift and go to state 82
    Mas             shift and go to state 83
    Menos           shift and go to state 84
    Por             shift and go to state 85
    Entre           shift and go to state 86
    Potencia        shift and go to state 87
    GuionBajo       shift and go to state 88
    SignoInterr     shift and go to state 89
    Gato            reduce using rule 4 (Vacio -> .)

    miString                       shift and go to state 64
    Vacio                          shift and go to state 65

state 44

    (40) S -> OUTPUT . Outopt PuntoYComa
    (86) Outopt -> . IDrepOUT
    (87) Outopt -> . Comillas miStringOut Comillas
    (13) IDrepOUT -> . idOUT
    (14) IDrepOUT -> . idOUT Coma IDrepOUT
    (15) idOUT -> . id

    Comillas        shift and go to state 92
    id              shift and go to state 94

    Outopt                         shift and go to state 90
    IDrepOUT                       shift and go to state 91
    idOUT                          shift and go to state 93

state 45

    (46) letSintaxis -> LET . letid matriz DosPuntosIgual E Cuadruploigualacion
    (55) letid -> . id

    id              shift and go to state 96

    letid                          shift and go to state 95

state 46

    (26) P -> SUB PROCEDURE nombreRutina DosPuntos . B CuadruploReturn PuntoYComa
    (29) B -> . BEGIN Srep

    BEGIN           shift and go to state 24

    B                              shift and go to state 97

state 47

    (9) V -> DIM IDrepCrear of Type PuntoYComa .
    (10) V -> DIM IDrepCrear of Type PuntoYComa . V
    (9) V -> . DIM IDrepCrear of Type PuntoYComa
    (10) V -> . DIM IDrepCrear of Type PuntoYComa V

    SUB             reduce using rule 9 (V -> DIM IDrepCrear of Type PuntoYComa .)
    BEGIN           reduce using rule 9 (V -> DIM IDrepCrear of Type PuntoYComa .)
    DIM             shift and go to state 10

    V                              shift and go to state 98

state 48

    (21) Type -> matrixDeclaration sacaMatrices .

    PuntoYComa      reduce using rule 21 (Type -> matrixDeclaration sacaMatrices .)


state 49

    (23) sacaMatrices -> Vacio .

    PuntoYComa      reduce using rule 23 (sacaMatrices -> Vacio .)


state 50

    (22) matrixDeclaration -> matrix size . CorcheteA Decnumsize CorcheteC

    CorcheteA       shift and go to state 99


state 51

    (31) Srep -> S Srep .

    END             reduce using rule 31 (Srep -> S Srep .)
    RETURN          reduce using rule 31 (Srep -> S Srep .)
    LOOP            reduce using rule 31 (Srep -> S Srep .)
    ELSE            reduce using rule 31 (Srep -> S Srep .)
    ENDIF           reduce using rule 31 (Srep -> S Srep .)
    WEND            reduce using rule 31 (Srep -> S Srep .)
    NEXT            reduce using rule 31 (Srep -> S Srep .)


state 52

    (32) S -> letSintaxis PuntoYComa .

    IF              reduce using rule 32 (S -> letSintaxis PuntoYComa .)
    INPUT           reduce using rule 32 (S -> letSintaxis PuntoYComa .)
    WHILE           reduce using rule 32 (S -> letSintaxis PuntoYComa .)
    DO              reduce using rule 32 (S -> letSintaxis PuntoYComa .)
    FOR             reduce using rule 32 (S -> letSintaxis PuntoYComa .)
    GOSUB           reduce using rule 32 (S -> letSintaxis PuntoYComa .)
    Gato            reduce using rule 32 (S -> letSintaxis PuntoYComa .)
    OUTPUT          reduce using rule 32 (S -> letSintaxis PuntoYComa .)
    LET             reduce using rule 32 (S -> letSintaxis PuntoYComa .)
    END             reduce using rule 32 (S -> letSintaxis PuntoYComa .)
    RETURN          reduce using rule 32 (S -> letSintaxis PuntoYComa .)
    LOOP            reduce using rule 32 (S -> letSintaxis PuntoYComa .)
    ELSE            reduce using rule 32 (S -> letSintaxis PuntoYComa .)
    ENDIF           reduce using rule 32 (S -> letSintaxis PuntoYComa .)
    WEND            reduce using rule 32 (S -> letSintaxis PuntoYComa .)
    NEXT            reduce using rule 32 (S -> letSintaxis PuntoYComa .)


state 53

    (33) S -> IF ParentesisA . E ParentesisC paso1IF THEN Srep Elsop ENDIF paso3IF PuntoYComa
    (56) E -> . ES Mayor ES
    (57) E -> . ES Menor ES
    (58) E -> . ES MayorIgual ES
    (59) E -> . ES MenorIgual ES
    (60) E -> . ES Igual ES
    (61) E -> . ES Diferente ES
    (62) E -> . ES
    (63) ES -> . T
    (64) ES -> . ES Mas T
    (65) ES -> . ES Menos T
    (66) ES -> . ES OR T
    (67) T -> . F
    (68) T -> . T Por F
    (69) T -> . T AND F
    (70) T -> . T Entre F
    (71) T -> . T Potencia F
    (72) T -> . T NOT F
    (73) F -> . id
    (74) F -> . id CorcheteA Erep CorcheteC
    (75) F -> . numero
    (76) F -> . ParentesisA E ParentesisC

    id              shift and go to state 105
    numero          shift and go to state 106
    ParentesisA     shift and go to state 100

    E                              shift and go to state 101
    ES                             shift and go to state 102
    T                              shift and go to state 103
    F                              shift and go to state 104

state 54

    (34) S -> INPUT IDrepInput . PuntoYComa

    PuntoYComa      shift and go to state 107


state 55

    (16) IDrepInput -> idInput .
    (17) IDrepInput -> idInput . Coma IDrepInput

    PuntoYComa      reduce using rule 16 (IDrepInput -> idInput .)
    Coma            shift and go to state 108


state 56

    (18) idInput -> id .

    Coma            reduce using rule 18 (idInput -> id .)
    PuntoYComa      reduce using rule 18 (idInput -> id .)


state 57

    (35) S -> WHILE paso1WHILE . ParentesisA E ParentesisC paso2WHILE Srep WEND paso3WHILE PuntoYComa

    ParentesisA     shift and go to state 109


state 58

    (47) paso1WHILE -> Vacio .

    ParentesisA     reduce using rule 47 (paso1WHILE -> Vacio .)


state 59

    (36) S -> DO paso1DO . Srep LOOP ParentesisA E ParentesisC paso2DO PuntoYComa
    (30) Srep -> . S
    (31) Srep -> . S Srep
    (32) S -> . letSintaxis PuntoYComa
    (33) S -> . IF ParentesisA E ParentesisC paso1IF THEN Srep Elsop ENDIF paso3IF PuntoYComa
    (34) S -> . INPUT IDrepInput PuntoYComa
    (35) S -> . WHILE paso1WHILE ParentesisA E ParentesisC paso2WHILE Srep WEND paso3WHILE PuntoYComa
    (36) S -> . DO paso1DO Srep LOOP ParentesisA E ParentesisC paso2DO PuntoYComa
    (37) S -> . FOR ParentesisA letSintaxis paso1FOR PuntoYComa E paso2FOR PuntoYComa letSintaxis ParentesisC paso3FOR Srep NEXT paso4FOR PuntoYComa
    (38) S -> . GOSUB gosubCuad PuntoYComa
    (39) S -> . Gato miString Gato
    (40) S -> . OUTPUT Outopt PuntoYComa
    (46) letSintaxis -> . LET letid matriz DosPuntosIgual E Cuadruploigualacion

    IF              shift and go to state 37
    INPUT           shift and go to state 38
    WHILE           shift and go to state 39
    DO              shift and go to state 40
    FOR             shift and go to state 41
    GOSUB           shift and go to state 42
    Gato            shift and go to state 43
    OUTPUT          shift and go to state 44
    LET             shift and go to state 45

    Srep                           shift and go to state 110
    S                              shift and go to state 35
    letSintaxis                    shift and go to state 36

state 60

    (50) paso1DO -> Vacio .

    IF              reduce using rule 50 (paso1DO -> Vacio .)
    INPUT           reduce using rule 50 (paso1DO -> Vacio .)
    WHILE           reduce using rule 50 (paso1DO -> Vacio .)
    DO              reduce using rule 50 (paso1DO -> Vacio .)
    FOR             reduce using rule 50 (paso1DO -> Vacio .)
    GOSUB           reduce using rule 50 (paso1DO -> Vacio .)
    Gato            reduce using rule 50 (paso1DO -> Vacio .)
    OUTPUT          reduce using rule 50 (paso1DO -> Vacio .)
    LET             reduce using rule 50 (paso1DO -> Vacio .)


state 61

    (37) S -> FOR ParentesisA . letSintaxis paso1FOR PuntoYComa E paso2FOR PuntoYComa letSintaxis ParentesisC paso3FOR Srep NEXT paso4FOR PuntoYComa
    (46) letSintaxis -> . LET letid matriz DosPuntosIgual E Cuadruploigualacion

    LET             shift and go to state 45

    letSintaxis                    shift and go to state 111

state 62

    (38) S -> GOSUB gosubCuad . PuntoYComa

    PuntoYComa      shift and go to state 112


state 63

    (41) gosubCuad -> id .

    PuntoYComa      reduce using rule 41 (gosubCuad -> id .)


state 64

    (39) S -> Gato miString . Gato

    Gato            shift and go to state 113


state 65

    (88) miString -> Vacio .

    Gato            reduce using rule 88 (miString -> Vacio .)
